<resources>
    <string name="app_name">TheMovieDBApiProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logInLabel">Login</string>
    <string name="logInText">Log in with one of the following options</string>
    <string name="emailLabel">Email</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="btnLogInLabel">Log in</string>
    <string name="createAccountLabel">Don\'t have an account?</string>
    <string name="signUpLabel">Sign up</string>
    <string name="signUpText">Sign up with one of the following options</string>
    <string name="nameLabel">Name</string>
    <string name="nameHint">Enter your name</string>
    <string name="btnCreateAccountLabel">Create account</string>
    <string name="loginLabel">Login</string>
    <string name="haveAnAccountLabel">Already have an account?</string>
</resources>