<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/logInLabel"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvLoginDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logInText"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/emailLabel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDesc" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edit_text"
        android:hint="@string/emailHint"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/tvEmailText" />

    <TextView
        android:id="@+id/tvPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/passwordLabel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edit_text"
        android:drawableEnd="@drawable/eye_closed"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordText" />

    <Button
        android:id="@+id/btnSingIn"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/selector_button"
        android:text="@string/btnLogInLabel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/linearlayout"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide">

        <TextView
            android:id="@+id/tvAccountDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccountLabel"
            android:textColor="@color/lightGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/signUpLabel"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>